# show-direnv-diff

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
